my task center page content alignment bug fixing

--- a/public/after_login/new_ui/css/style.css
+++ b/public/after_login/new_ui/css/style.css
@@ -13,6 +13,9 @@ button {
     outline: none;
     text-decoration: none;
 }
+.dailytask-wrapper .dtrow-left .col-md-6 p:nth-child(2) {
+    min-height: 42px;
+}
 .practice-series-lists #scroll-mobile , .practice_custom_page #scroll-mobile , 
 .mocktest-attempted-wrapper #scroll-mobile, .live-exam-list-wrapper #scroll-mobile{overflow-x: hidden!important;}
 .matrixpage-wrapper .course-star li span:last-child {
